Squashed beta-1.5.7-pre06
commit 66e2d2fe401db9dc13a91f77cb902788c98405b4
Author: Dimitry Polivaev <dpolivaev@gmx.de>
Date:   Sun Mar 27 19:12:22 2016 +0200

    Disable security checks based on property
    "org.freeplane.main.application.FreeplaneSecurityManager.disable" as
    before

commit 6e3009c5353770b7545479a8ef0e5a311aee7809
Author: Dimitry Polivaev <dpolivaev@gmx.de>
Date:   Sun Mar 27 19:01:58 2016 +0200

    Remove mode list from style editor menu

commit 44a22d8738ce41e34733606e55425d9585d88d69
Merge: 1490c60 af4d9e6
Author: Dimitry Polivaev <dimitry.polivaev@mercateo.com>
Date:   Sun Mar 27 14:30:44 2016 +0200

    Merge branch '1.5.x' of https://github.com/freeplane/freeplane into 1.5.x

commit 1490c603c9c143273ca31f118a63cec049c24a3c
Author: Dimitry Polivaev <dimitry.polivaev@mercateo.com>
Date:   Sun Mar 27 14:30:32 2016 +0200

    Fix scripting security issues

commit af4d9e642ed940f55ff9061898fd41dc8210af60
Merge: 0f48a6c 057eabf
Author: Felix Natter <fnatter@gmx.net>
Date:   Sat Mar 26 14:24:00 2016 +0100

    Merge branch '1.5.x' of https://github.com/freeplane/freeplane.git into 1.5.x

commit 0f48a6ce2e729ddc62df900a1fc08534e20d097d
Author: Felix Natter <fnatter@gmx.net>
Date:   Sat Mar 26 14:22:51 2016 +0100

    #2170: Keep keymap window open: Make keymap window resizable

commit 057eabf5fbcbf05962d1e103f52323c7ab37b110
Merge: 7e04515 339c170
Author: Weblate <noreply@weblate.org>
Date:   Sat Mar 26 10:47:10 2016 +0100

    Merge remote-tracking branch 'origin/1.5.x' into 1.5.x

commit 7e04515c94acf5caa9ec39b4a96974aaab508ba0
Author: YFdyh000 <yfdyh000@gmail.com>
Date:   Thu Mar 24 11:02:55 2016 +0100

    Translated using Weblate (Chinese (China))

    Currently translated at 97.9% (1890 of 1930 strings)

commit 339c17046d8fe98ac7124dcc9e741154eaca192c
Author: Felix Natter <fnatter@gmx.net>
Date:   Sat Mar 26 10:46:47 2016 +0100

    fix javadoc internal links

commit c1ccecd50e4d00dcfa4ba391ede097135d67532b
Author: hokorobi <hokorobi.hokoro

--- a/freeplane/resources/translations/Resources_fr.properties
+++ b/freeplane/resources/translations/Resources_fr.properties
@@ -470,7 +470,7 @@ fit_background_to_page=Ajuster l'image d'arri\u00E8re-plan
 fit_map_to_page=Ajuster \u00E0 une seule page
 fit_map_to_page_height=Ajuster la hauteur \u00E0 une page
 fit_map_to_page_width=Ajuster la largeur \u00E0 une page
-FitToPage.text=Faire tenir dans la page
+FitToPage.text=Ajuster \u00E0 la page
 FitToPage.tooltip=Ajuste le zoom pour que la carte tienne sur la page
 fold=Plier
 FoldAllAction.text=Tout plier
@@ -651,7 +651,7 @@ icon_wizard=Magique
 icon_xmag=\u00C0 discuter
 icon_yes=Important
 IconGroupPopupAction.arrows.text=Fl\u00E8ches
-IconGroupPopupAction.docs_folders.text=Documents
+IconGroupPopupAction.docs_folders.text=Documents et Fichiers
 IconGroupPopupAction.flags.text=Drapeaux
 IconGroupPopupAction.math.text=Calcul
 IconGroupPopupAction.media.text=M\u00E9dia
@@ -682,12 +682,12 @@ image_covertLink=Convertir le lien en image
 ImageFlavorHandler=Image (utilise un fichier s\u00E9par\u00E9)
 import=I&mporter
 import_linked_branch_no_link=Le n\u0153ud s\u00E9lectionn\u00E9 n'a pas de lien exploitable comme source d'import.
-ImportAction.text=Importer
-ImportBranchAction.text=Une carte...
+ImportAction.text=Importer une carte
+ImportBranchAction.text=Branche...
 ImportExplorerFavoritesAction.text=Les favoris d'Internet Explorer...
 ImportFolderStructureAction.text=Une arborescence de dossiers...
 ImportLinkedBranchAction.text=La carte li\u00E9e
-ImportLinkedBranchWithoutRootAction.text=La carte li\u00E9e sans la racine
+ImportLinkedBranchWithoutRootAction.text=La branche li\u00E9e sans la racine...
 ImportMindmanagerFiles.text=Carte MindManager X5...
 ImportXmlFile.text=Importer un fichier XML
 increase_branch_font_size=Augmenter la taille du texte de la branche
@@ -1542,7 +1542,7 @@ reset_to_default=Par d\u00E9faut
 ResetNodeLocationAction.text=Restaurer la position du n\u0153ud
 ResetStyleAction.text=Effacer le style du n\u0153ud
 RevertAction.text=Restaurer le dernier enregistrement
-RevisionPluginAction.text=Indiquer les n\u0153uds r\u00E9vis\u00E9s
+RevisionPluginAction.text=Modifier la couleur d'arri\u00E8re-plan des n\u0153uds r\u00E9vis\u00E9s
 save_failed=L''enregistrement de la carte {0} a \u00E9chou\u00E9.
 save_unsaved=Souhaitez-vous enregistrer la carte suivante ?
 save_unsaved_styles=Enregistrer les styles ?
