--- a/freeplane/viewer-resources/translations/Resources_en.properties
+++ b/freeplane/viewer-resources/translations/Resources_en.properties
@@ -1547,10 +1547,10 @@ save_failed=Attempt to save the map {0} failed.
 save_unsaved=Save the following mindmap?
 save_unsaved_styles=Save styles?
 SaveAcceleratorPresetsAction.text=Save hot key set...
-SaveAction.text=Save map
+SaveAction.text=&Save map
 SaveAction_readonlyMsg=This map is read-only. Please use 'File->Save map as...' to save this map.
 SaveAction_readonlyTitle=Attempt to save read-only map
-SaveAll.text=Save all opened maps
+SaveAll.text=Save &all opened maps
 SaveAll.tooltip=Saves all opened maps
 SaveAs_toReadonlyMsg={0} is read-only. Please save to a different file.
 SaveAs_toReadonlyTitle=Attempt to save to read-only file
